# ib-physics-ia

./: .gitignore  README.md  install.sh  install_source.sh  pyproject.toml  start.sh
app/: package.json
app/src/: App.svelte
app/src/lib/: Loader.svelte  Modal.svelte  StatusBar.svelte  StatusIndicator.svelte
logs/: obd_log-HRZJ.csv
server/: main.py  old.py
