[tool.poetry]
name = "ib-physics-ia"
version = "0.0.1"
description = ""
authors = ["Carlos Valdez <33138184+DJCarlosValdez@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = "^5.7.1"
obd = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
