[tool.poetry]
name = "server"
version = "0.0.1"
description = ""
authors = ["Carlos Valdez <33138184+DJCarlosValdez@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.8"
obd = "^0.7.1"
flask-socketio = "^5.3.1"
flask-cors = "^3.0.10"
eventlet = "^0.33.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
